# ariadne

./: .env.example  .gemini.md  .gitignore  README.md  ariadne.py  create_plane_agents.py  headless_ariadne.py  pyproject.toml  refine_architecture.py  requirements.txt  run_agent.py  run_req_agent_directly.py  start_architect_phase.py  start_requirements_phase.py  start_v_model.py  test_agent_development.py  test_langgraph.py  test_phase_1.py  update_ticket.py
docs/: architecture_plan.md  ticket_system_spec.md
docs/design/: ARCH-15.md  ARCH-19.md
docs/requirements/: REQ-001.md  REQ-102.md  REQ-15.md  REQ-16.md
docs/specs/: SPEC-1.md
docs/templates/: ARCH-TEMPLATE.md  REQ-TEMPLATE.md  TICKET_ARCH.md  TICKET_DEV.md  TICKET_EPIC.md  TICKET_ISSUE.md  TICKET_REQ.md  TICKET_TEST.md
old/: =13.0.0  example.py  example_advanced.py  example_agents.py  example_anthropic.py  example_langgraph.py  example_openai.py  example_settings.py  example_tools.py
old/ariadne/: __init__.py  app.py  commands.py  langgraph_adapter.py  message.py  widgets.py
packaging/arch/: PKGBUILD
scripts/: check_status.py  headless_ariadne.py  init_config.py  refine_architecture.py  run_agent.py  run_req_agent_directly.py  setup_agents.py  setup_plane.py  start_architect_phase.py  start_requirements_phase.py  start_v_model.py  test_agent_development.py  test_phase_1.py  test_sqlite_db.py  update_epic.py  update_ticket.py
src/: config.py  engineer_agent.py  file_tools.py  llm_factory.py  logging_config.py  plane_client.py  pm_tools.py  po_agent.py  requirements_agent.py  setup_agents.py  setup_plane.py  user_interface.py
src/agents/: architect_agent.py  base_agent.py  developer_agent.py  engineer_agent.py  orchestrator_agent.py  po_agent.py  qa_agent.py  qm_agent.py  requirements_agent.py  tester_agent.py
src/ariadne/: __init__.py
(+67 files in other folders)
