[project]
name = "ariadne"
version = "0.1.0"
description = "A minimalist terminal chat UI"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
langgraph = [
    "langgraph>=0.0.30",
    "langchain-core>=0.1.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "langgraph>=0.0.30",
    "langchain-core>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
